crates/mlcg_builtin_macros/tests/ui/fail_empty_rust_name.stderr
error: instruction has empty rust_name
 --> tests/ui/fail_empty_rust_name.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/empty_rust_name_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
