crates/mlcg_builtin_macros/tests/ui/fail_empty_rust_name.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/empty_rust_name_manifest.toml");
}

fn main() {}
